--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,12 @@
 :root {
   --tan: #e9e9d1;
+  --tan-shadow: #bdaf8198;
   --dark-purple: #181519;
+  --dark-purple-shadow: #18151967;
   --green: #388e3c;
+  --green-shadow: #498e387e;
   --red: #c24141;
+  --red-shadow: #c2414173;
 }
 
 * {
@@ -21,7 +25,7 @@ body {
   color: var(--dark-purple);
 }
 
-body.dark-theme {
+body.dark-mode {
   color: var(--tan);
   background-color: var(--dark-purple);
 }
@@ -44,7 +48,7 @@ header {
   color: var(--dark-purple);
 }
 
-body.dark-theme > header {
+body.dark-mode > header {
   color: var(--tan);
 }
 
@@ -65,18 +69,12 @@ h3.score-display::before {
   background: var(--red);
   color: var(--tan);
   text-align: center;
-  box-shadow: 0px 10px 10px #c2414173;
+  box-shadow: 0px 10px 10px var(--red-shadow);
   opacity: 0;
   transition: 0.2s ease;
 }
 h3.score-display:hover:before {
   opacity: 1;
-}
-
-button.dark-mode-toggle {
-  padding: 5px;
-  border-radius: 20px;
-  font-size: 20px;
 }
 
 /* *############
@@ -131,7 +129,7 @@ div.cookie-prompt > input:hover,
 div.cookie-prompt > input:active,
 div.cookie-prompt > input:focus {
   width: 50%;
-  box-shadow: 0px 10px 10px #bdaf8198;
+  box-shadow: 0px 10px 10px var(--tan-shadow);
 }
 
 div.cookie-prompt > button {
@@ -143,11 +141,11 @@ div.cookie-prompt > button {
 div.cookie-prompt > button:hover {
   background-color: var(--green);
   color: var(--tan);
-  box-shadow: 0px 10px 10px #498e387e;
+  box-shadow: 0px 10px 10px var(--green-shadow);
   cursor: pointer;
 }
 
-body.dark-theme > main > ul > li > a {
+body.dark-mode > main > ul > li > a {
   color: var(--tan);
 }
 
@@ -167,8 +165,32 @@ footer > div > a {
   font-size: large;
 }
 
-body.dark-theme > footer > div > a {
+body.dark-mode > footer > div > a {
   color: var(--tan);
+}
+
+button.dark-mode-toggle {
+  color: var(--tan);
+  background-color: var(--dark-purple);
+  cursor: pointer;
+  padding: 5px;
+  border-radius: 20px;
+  font-size: 20px;
+  transition: all 0.3s ease;
+}
+
+body.dark-mode > footer > button.dark-mode-toggle {
+  background-color: var(--tan);
+  color: var(--dark-purple);
+}
+
+button.dark-mode-toggle:hover {
+  transform: scale(1.1);
+  box-shadow: 0px 5px 6px var(--dark-purple-shadow);
+}
+
+body.dark-mode > footer > button:hover {
+  box-shadow: 0px 5px 6px var(--tan-shadow);
 }
 
 @keyframes grow {
